# Ursa

./: .gitignore  CMakeLists.txt
resource/: FragmentSample.frag  VertexSample.vert
resource/shaders/: FragmentSample.frag  VertexSample.vert
source/: Log.cpp  Log.hpp  Main.cpp  Shader.cpp  Shader.hpp
